--- a/paperprototype.html
+++ b/paperprototype.html
@@ -77,8 +77,8 @@
                                 <div class="desc text-left">
 
                                     <h4 class="title">Share a slide presentation</h4>
-                                    <p>Use the following slide deck as is, or customize it to make it your own. Going through this will teach you everything you need to lead this activity with your club.</p>
-                                    <p>After you customize the slidedeck use it during your Club's meeting for introducing your members into prototyping their idea.</p>
+                                    <p>Use the following slide deck as is, or customize it to make it your own. We have included the information we think you will need to lead this activity with your club.</p>
+                                    <p>After you customize the slidedeck, use it during your Club's meeting to introduce your members to prototyping their ideas.</p>
                                     <a class="btn btn-cta-secondary fork" href="https://docs.google.com/presentation/d/1qySrYEOtLvs7Cuum1TuH7Mud-5M-Bqtli1lqSrJmA7s/edit#slide=id.p" target="_blank">Prototyping ideas slidedeck</a>
 
                                 </div><!--//desc-->
@@ -93,13 +93,13 @@
                         <h2 class="heading">Plan - 5'</h2>
                         <div class="content">
                             <div class="item">
-                                <p>In your last meeting your group identified an idea for building a browser add-on and submitted on GitHub. </p>
-                                <p>Now it's time to start to flesh out what your addon's product experience would look like. Ask the following questions:</p>
+                                <p>During the last meeting, your group identified an idea for building a browser add-on and submitted it for feedback on GitHub.</p>
+                                <p>Now it's time to start to flesh out your add-on's product experience Within your group, ask the following questions:</p>
                                 <ul>
-                                  <li>What interactions would the user need to have, where does your product end and real life begin?</li>
-                                  <li>What are the questions you have, the assumptions you are making in this? </li>
+                                  <li>What interactions would the user need to have with this add-on? Where does your product end and real life begin?</li>
+                                  <li>What are your assumptions about this? What questions do you have?</li>
                                 </ul>
-                                <p>A paper prototype can be great to shape an idea but can also be a great way to test these early questions about how to design a solution. Think about what your goal is for your prototype before you start creating it. Select one scenario that can aide you in this goal and a few key tasks to focus on developing further.</p>
+                                <p>A paper prototype can help shape an idea, and it  can also be a great way to test these early questions about how to design a product. Think about what you want to accomplish with your product before you start creating the prototype. Select one scenario that can help you achieve this goal and a few key tasks to focus on further developing the prototype.</p>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -110,7 +110,7 @@
                         <h2 class="heading">Create - 35'</h2>
                         <div class="content">
                             <div class="item">
-                                <p>Use the paper and pen to draw out each interaction screen for the tasks/scenario you have chosen. Not every screen has to be redone, If small things change, use cut outs to be able to move small changes in place. Continue to walk through your prototype until it makes sense to you and your team. And then go test it with users. You can either present your paper prototype as is or you can make it easier to share by incorporating it with links in programs like <a href="https://www.invisionapp.com/" target="_blank">invision</a> or <a href="https://popapp.in/" target="_blank">pop.</a></p>
+                                <p>Use the paper and pen to draw out each interaction screen for the tasks/scenario you have chosen. If small things change, use cut outs to be able to move small changes in place. Continue to walk through your prototype until it makes sense to you and your team. Then, test these drawings with users. You can either present your paper prototype as is or you can make it easier to share by incorporating it with links in programs like <a href="https://www.invisionapp.com/" target="_blank">invision</a> or <a href="https://popapp.in/" target="_blank">pop.</a></p>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -122,11 +122,11 @@
                         <h2 class="heading">Share and Test your prototype - 10'</h2>
                         <div class="content">
                             <div class="item">
-                                <p>Congratulations! You are now ready to reap the benefits of prototyping earlier.</p>
-                                <p>You can use your new prototype to test your solution with real users and gain buy-in and understanding by sharing with the relevant stakeholders.</p>
+                                <p>Congratulations! You are now ready to reap the benefits of early prototyping.</p>
+                                <p>You can use your new prototype to test your solution with real users. Doing so will help you gain buy-in and understanding from relevant stakeholders.</p>
                                 <ol>
-                                  <li>Spend two minutes to make pair of groups</li>
-                                  <li>Each group has 5’ to present its idea, gather feedback and test their prototype with the other group</li>
+                                  <li>Spend two minutes to pair the groups together. Each group should randomly pair with another one</li>
+                                  <li>Each group has 5’ to present its idea, gather feedback, and test their prototype with the other group</li>
                                 </ol>
                                 <p>Review the feedback you received from the other teams and update/adjust your prototypes if necessary.</p>
                             </div><!--//item-->
@@ -139,9 +139,9 @@
                         <h2 class="heading">Update your proposal - 10'</h2>
                         <div class="content">
                             <div class="item">
-                                <p>As final step we invite you to upload all of your digital resources (photos, files) into your idea submission on GitHub.</p>
-                                <p>That way all of your fellow Open Source Clubs and experts will be able to track your progress and see the amazing work you are doing!</p>
-                                <p>You are now ready to take the next step and start Building your browser add-on! Ask your Club Captain when the next meeting will be.</p>
+                                <p>We invite you to upload all of your digital resources (photos, files) into your idea submission on GitHub.</p>
+                                <p>This way, all of your fellow Open Source Clubs and experts will be able to track your progress and see the amazing work you are doing!</p>
+                                <p>You are now ready to take the next step and start building your browser add-on! Ask your Club Captain when the next meeting will be.</p>
                                 <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/teach-how-to-build-addons/issues/">Update your idea on GitHub</a>
                             </div><!--//item-->
                         </div><!--//content-->
@@ -205,7 +205,7 @@
                                     <li>Your favorite text editor</li>
                                     <li>Access to the internet</li>
                                     <li>Paper, cardboard, foam, glue, scissors, markers, bluetack</p>
-                                    <li>For testing use programs such as keynote, <a href="https://www.invisionapp.com/" target="_blank">invisio</a> or <a href="https://popapp.in/" target="_blank">pop app</a></li>
+                                    <li>For testing use programs such as, <a href="https://www.invisionapp.com/" target="_blank">invision</a> or <a href="https://popapp.in/" target="_blank">pop app</a></li>
                                     </ul>
                                 </div><!--//item-->
                             </div>
