Update terminology, grammar for first event

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Build your first Browser Extension</title>
+    <title>Build Your First Extension for Firefox</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="An activity for building your VR experience">
+    <meta name="description" content="An activity for building an extension for Firefox">
     <meta name="author" content="Mozilla Campus Clubs">
     <link rel="shortcut icon" href="favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
@@ -45,7 +45,7 @@
         <div class="container">
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" />
             <div class="profile-content pull-left">
-                <h1 class="name">Build your first Browser Extension</h1>
+                <h1 class="name">Build Your First Extension for Firefox</h1>
                 <h2 class="desc">First meeting - Introduction to Browser Extensions</h2>
             </div><!--//profile-->
         </div><!--//container-->
@@ -59,7 +59,7 @@
                         <h2 class="heading">Introduction</h2>
                         <div class="content">
                           <p>Add-ons provide a safe, simple, and powerful way to personalize your browsing experience. Now, it’s easier than ever to create add-ons for Firefox with WebExtensions APIs. This Web-based technology framework offers a powerful way to create browser extensions that can be easily ported to Chrome, Opera, and Edge, and you only need to know HTML, JavaScript and CSS to build them.</p>
-                          <p>In this activity you will learn about what makes browser extensions great and how to build a simple add-on using WebExtensions APIs.  This activity will also prepare you for your next meeting in which you will start diving more into <b>Building your First browser add-on</b>.</p> </div><!--//content-->
+                          <p>In this activity you will learn about what makes browser extensions great and how to build a simple extension using WebExtensions APIs.  This activity will also prepare you for your next meeting in which you will start diving more into <b>building your first extension for Firefox</b>.</p> </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
 
@@ -82,7 +82,7 @@
                                     <br>
                                     <h4 class="title">Share a slide presentation</h4>
                                     <p>Use the following slide deck as is, or customize it to make it your own. Going through this will teach you everything you need to lead this activity with your club.</p>
-                                    <p>After you customize the slidedeck use it during your Club's first meeting for introducing your members into browser extensions.</p>
+                                    <p>After you customize the slidedeck, use it during your Club's first meeting to introduce your members into browser extensions.</p>
                                     <a class="btn btn-cta-secondary fork" href="https://docs.google.com/presentation/d/1C0YbS15YO_JbH8dY_4nhPZWTtJOPe2Fx8GRyZjPCAgs/edit#slide=id.p" target="_blank">Teach browser extensions</a>
 
                                 </div><!--//desc-->
@@ -97,7 +97,7 @@
                         <h2 class="heading">Idea Generation - 35'</h2>
                         <div class="content">
                             <div class="item">
-                                <p class="summary">Now your Club is fired up and ready to go, we invite you to start brain storming ideas for building your first add-on either as individuals or together as a group.</p>
+                                <p class="summary">Now your Club is fired up and ready to go, we invite you to start brainstorming ideas for building your first extension either as individuals or together as a group.</p>
                                 <p>Break into small groups (less than 4 people) and:</p>
                                 <ul>
                                   <li>Search <a href="addons.mozilla.org">addons.mozilla.org</a> and test extensions</li>
@@ -105,9 +105,9 @@
                                 </ul>
                                 <p>Now that you have seen some extensions in action, work as a group for answering the following question:</p>
                                 <br>
-                                <h4><b>What would you like to solve for by building an add-on?</b></h4>
+                                <h4><b>What would you like to solve for by building an extension?</b></h4>
                                 <br>
-                                <p>Useful tips on Idea generation from the <a href="https://toolkit.mozilla.org/method/idea-generation/">Open Innovation Toolkit:</a></p>
+                                <p>Useful tips on idea generation from the <a href="https://toolkit.mozilla.org/method/idea-generation/">Open Innovation Toolkit:</a></p>
                                 <p><b>Part 1:</b> Aim to spend about ⅓ of the allotted time on divergent thinking. This is the rapid creation of random, unorganized, wild, free-flowing, novel ideas in a short period of time. This method helps people to think outside the usual constraints. This type of thinking encourages people to get comfortable with ideas that may not be immediately valuable, but could provide the key ingredient for driving innovation.</p>
                                 <p><b>Part 2:</b> Aim to spend about ⅙ of the allotted time on convergent thinking. This is a selective critique and combination of ideas in order to develop strong concepts. The convergent thinking method helps intelligently refine ideas by strengthening them and/or putting them together. The combination forces new thinking and creativity around how new solutions can be made and differentiated. Create clusters of complementary ideas and add more texture and detail by using affinity clustering.</p>
                             </div><!--//item-->
@@ -121,12 +121,12 @@
                         <div class="content">
                             <div class="item">
                                 <p>Now that you have thought about and processed some of the ideas, it's time to synthesize your final proposal.</p>
-                                <p>Pick at least one of the strongest ideas and refine by imagining the scenario of usage and the social, emotional attributes your target user would experience or need to accomplish by using your browser add-on.</p>
+                                <p>Pick at least one of the strongest ideas and refine by imagining the scenario of usage and the social, emotional attributes your target user would experience or need to accomplish by using your extension.</p>
                                 <p>Spend some time discussing how to answers the following questions:</p>
                                 <ol>
                                   <li>What is the problem you want to solve?</li>
                                   <li>Who is your audience?</li>
-                                  <li>What is the impact your add-on will have on your audience's experience of the web?</li>
+                                  <li>What is the impact your extension will have on your audience's experience of the web?</li>
                                 </ol>
                             </div><!--//item-->
                             <p>Are you ready to submit you ideas?</p>
@@ -141,7 +141,7 @@
                         <div class="content">
                             <div class="item">
                                 <p>Congratulations! It's time for all student groups to share their ideas with the rest of the Open Source Clubs community and Mozilla's Add-ons team!</p>
-                                <p>Fellow students and the experts will be able to see your idea, ask questions and provide feedback or insights which will help you build your browser add-on.</p>
+                                <p>Fellow students and the experts will be able to see your idea, ask questions, and provide feedback or insights which will help you build your extension.</p>
                             </div><!--//item-->
 
                             <div class="item">
@@ -161,7 +161,7 @@
                       <div class="content">
                           <div class="item">
                               <blockquote class="quote">
-                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn everything around browser extensions. You will also learn how to work into groups for generatings and synthesize ideas which you will turn into browser add-ons in the next meeting/activity</p>
+                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn how to build browser extensions. You will also learn how to work into groups to generate and synthesize ideas which you will turn into browser extensions in the next meeting/activity</p>
                               </blockquote>
                               <p class="source"><span class="name">Alexandros Dorodoulis</span><br /><span class="title">Undergrad Computer Science Student</span></p>
                           </div><!--//item-->
