changed linkes, added buttons

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <!-- ******HEADER****** -->
     <header class="header">
         <div class="container">
-            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" />
+            <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="profile image "/>
             <div class="profile-content pull-left">
                 <h1 class="name">Build your first Browser Extension</h1>
-                <h2 class="desc">First meeting - Introduction to Browser Extensions</h2>
+                <h2 class="desc">First meeting - Introduction to <a href="https://addons.mozilla.org/en-US/firefox/extensions/">Browser Extensions</a></h2>
             </div><!--//profile-->
         </div><!--//container-->
     </header><!--//header-->
@@ -100,7 +100,7 @@
                                 <p class="summary">Now your Club is fired up and ready to go, we invite you to start brain storming ideas for building your first add-on either as individuals or together as a group.</p>
                                 <p>Break into small groups (less than 4 people) and:</p>
                                 <ul>
-                                  <li>Search <a href="addons.mozilla.org">addons.mozilla.org</a> and test extensions</li>
+                                  <li>Search <a href="addons.mozilla.org"><button class="btn btn-danger">addons.mozilla.org</button></a> and test extensions</li>
                                   <li>Discuss what do you like/not like about them?</li>
                                 </ul>
                                 <p>Now that you have seen some extensions in action, work as a group for answering the following question:</p>
@@ -108,8 +108,8 @@
                                 <h4><b>What would you like to solve for by building an add-on?</b></h4>
                                 <br>
                                 <p>Useful tips on Idea generation from the <a href="https://toolkit.mozilla.org/method/idea-generation/">Open Innovation Toolkit:</a></p>
-                                <p><b>Part 1:</b> Aim to spend about ⅓ of the allotted time on divergent thinking. This is the rapid creation of random, unorganized, wild, free-flowing, novel ideas in a short period of time. This method helps people to think outside the usual constraints. This type of thinking encourages people to get comfortable with ideas that may not be immediately valuable, but could provide the key ingredient for driving innovation.</p>
-                                <p><b>Part 2:</b> Aim to spend about ⅙ of the allotted time on convergent thinking. This is a selective critique and combination of ideas in order to develop strong concepts. The convergent thinking method helps intelligently refine ideas by strengthening them and/or putting them together. The combination forces new thinking and creativity around how new solutions can be made and differentiated. Create clusters of complementary ideas and add more texture and detail by using affinity clustering.</p>
+                                <p><b>Part 1: </b> Aim to spend about ⅓ of the allotted time on divergent thinking. This is the rapid creation of random, unorganized, wild, free-flowing, novel ideas in a short period of time. This method helps people to think outside the usual constraints. This type of thinking encourages people to get comfortable with ideas that may not be immediately valuable, but could provide the key ingredient for driving innovation.</p>
+                                <p><b>Part 2: </b> Aim to spend about ⅙ of the allotted time on convergent thinking. This is a selective critique and combination of ideas in order to develop strong concepts. The convergent thinking method helps intelligently refine ideas by strengthening them and/or putting them together. The combination forces new thinking and creativity around how new solutions can be made and differentiated. Create clusters of complementary ideas and add more texture and detail by using affinity clustering.</p>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -146,7 +146,7 @@
 
                             <div class="item">
                               <!-- Place this tag where you want the button to render. -->
-                              <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/teach-how-to-build-addons/issues/new">Submit your idea on GitHub</a>
+                              <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/teach-how-to-build-addons/issues/new">Submit your idea on GitHub <i class="fa fa-github ml-1"></i></a>
                             </div><!--//item-->
                             <p>Are you ready to take the next step and build your extension? Ask your Club Captain when the next meeting will be.</p>
                         </div><!--//content-->
@@ -194,7 +194,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Time<span class="level-label">1 hour</span></h3>
+                                    <h3 class="level-title">Time<span class="level-label">1 hour <i class="fa fa-clock-o"></i></span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="10%">
                                         </div>
@@ -207,7 +207,7 @@
                                     <li><a href="https://docs.google.com/presentation/d/1C0YbS15YO_JbH8dY_4nhPZWTtJOPe2Fx8GRyZjPCAgs/edit#slide=id.p">Facilitators slidedeck</a></li>
                                     <li>A projector</li>
                                     <li>Laptops (1 per group)</li>
-                                    <li>Your favorite text editor</li>
+                                    <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Available_text_editors">Your favorite text editor</a></li>
                                     <li>Access to the internet</li>
                                     </ul>
                                 </div><!--//item-->
